--- a/aluroni/src/pages/Cardapio/style.module.scss
+++ b/aluroni/src/pages/Cardapio/style.module.scss
@@ -14,31 +14,6 @@
     }
 }
 
-.header {
-    align-items: center;
-    background-image: url('/assets/Cardapio/header.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    height: 18.75rem;
-    padding: 0 $padding-horizontal;
-    @media (max-width: $desktop_xsm) {
-        padding: 0rem $padding-horizontal-mobile;
-    }
-    @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
-        padding: 0rem $padding-horizontal-sm;
-    }
-    @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
-        padding: 0rem $padding-horizontal-md;
-    }
-    &__text {
-        color: #FFF;
-        font-size: 5rem;
-        min-width: 25rem;
-        width: 40%;
-    }
-}
-
 .section {
     padding: 3.125rem $padding-horizontal;
     @media (max-width: $desktop_xsm) {
@@ -54,6 +29,15 @@
         color: $dark;
         font-size: 3rem;
         margin-bottom: 1.875rem;
+    }
+
+    &__filtros {    
+        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-bottom: 1.875rem;
+        width: 100%;
     }
 
 }
