finalizando a pagina pratos

--- a/aluroni/src/styles/_variaveis.scss
+++ b/aluroni/src/styles/_variaveis.scss
@@ -4,6 +4,7 @@ $padding-horizontal-sm: 9.375rem;
 $padding-horizontal-md: 12.5rem;
 $dark: #242536;
 $dark-grey: #92929D;
+$darkest-grey: #70707b;
 $grey: #E4E4E4;
 $black: #4C4D5E;
 $light-grey: #F6F6F6;
